--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1 class="titulo">HEY GUERRERA </h1>
-<div class="img-1">
-    <img src="https://sticker.nyc3.cdn.digitaloceanspaces.com/20220415-16_sl2_512/file_8891702_512x512.webp" alt="">
+<div class="modal">
+    <div class="input-name">
+        <h2 class="saludo">¡HOLA!</h2>
+        <form action="">
+            <input type="text" required placeholder="Escribe tu nombre">
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
 </div>
+<h1 class="titulo">Feliz día de la madre <span class="corazon">❤</span></h1>
+<div class="img-1">
+    <img src="img/img2.png" alt="">
+   <h5> ¡Tócame <span class="usuario"></span>!</h5>
+</div>
+<script src="./script.js"></script>
 </body>
 </html>
