--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <img src="img/img2.png" alt="">
    <h5> ¡Tócame <span class="usuario"></span>!</h5>
 </div>
-<script src="./script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
