--- a/index.html
+++ b/index.html
@@ -22,6 +22,32 @@
     <img src="img/img2.png" alt="">
    <h5> ¡Tócame <span class="usuario"></span>!</h5>
 </div>
+<!-- carta -->
+<div class="frame-1">
+    <div id="wrap">
+		<input type="checkbox" id="checkbox" class="checkbox">
+		<div id="letter_wrap">
+			<label for="checkbox" class="handle" onclick></label>
+			<div id="back"></div>
+			<div id="flap">
+				<div id="closed_flap"></div>
+				<div id="open_flap"></div>
+			</div>
+			<div id="letter">
+        </br>
+        </br>
+        </br>
+				<p>Hi Mom!</p>
+				</br>
+        </br>
+				<p>Happy Mother's Day! I hope you have a wonderful day filled with love and spoiling 🥰</p>
+			</div>
+			<div id="front"></div>
+		</div>
+	</div>
+</div>
+<!-- carta dos -->
+
 <script src="script.js"></script>
 </body>
 </html>
