--- a/index.html
+++ b/index.html
@@ -37,16 +37,20 @@
         </br>
         </br>
         </br>
-				<p>Hi Mom!</p>
+				<p>Para la mujer Mas hermosa!</p>
 				</br>
         </br>
-				<p>Happy Mother's Day! I hope you have a wonderful day filled with love and spoiling 🥰</p>
+				<p>Eres la puerta que siempre estará abierta, la taza de té y la calma tras la tormenta. ¡Te adoro!</p>
 			</div>
 			<div id="front"></div>
 		</div>
 	</div>
 </div>
 <!-- carta dos -->
+<div class="img-2">
+  <h2 class="titulo-2">Gracias por estar en estos Momentos</h2>
+  <img src="https://videos.cults3d.com/VzCnIrS-ogVH0Z8J0PMnbybQPRI=/filters:format(webp)/https://files.cults3d.com/uploaders/19672684/illustration-file/d47be730-6d08-449d-9950-0e984cf7406e/Webp.net-gifmaker.gif" alt="">
+</div>
 
 <script src="script.js"></script>
 </body>
