--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<p>Para la mujer Mas hermosa!</p>
 				</br>
         </br>
-				<p>Eres la puerta que siempre estará abierta, la taza de té y la calma tras la tormenta. ¡Te adoro!</p>
+				<p>Eres la puerta que siempre estará abierta, la taza de té y la calma tras <br> la tormenta. ¡Te adoro!</p>
 			</div>
 			<div id="front"></div>
 		</div>
